[gd_scene load_steps=2 format=3 uid="uid://botfsj0nlsgb5"]

[ext_resource type="Script" path="res://Source/World/World Resources/flying_eye_spawner_area.gd" id="1_8iarc"]

[node name="FlyingEyeSpawnerArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_8iarc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="TimerHigh" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="TimerMiddle" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerLow" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
